--- a/app/views/api/v1/courses/show.html.erb
+++ b/app/views/api/v1/courses/show.html.erb
@@ -1,14 +1,7 @@
-courses#show
-<div>
-	<%= @course.title %>
-</div>
-<div>
-	<%= @course.description %> 
-</div>
-
-<h3>course sections</h3>
-<div>
-	<% @course.sections.each do |section| %> 
-		<%= section.title %>
-	<% end %>
+<div class="container pt-4">
+	<div>
+		<% @course.sections.each do |section| %>
+			<%= section.title %>
+		<% end %>
+	</div>
 </div>
