--- a/app/views/api/v1/lessons/show.html.erb
+++ b/app/views/api/v1/lessons/show.html.erb
@@ -1,8 +1,8 @@
-<h4>lessons#show</h4>
-
-<div>
-	<%= @lesson.title %>
-</div>
-<div>
-	<%= @lesson.description %>
+<div class="lesson">
+	<div class="lesson-title">
+		<strong><h4><%= @lesson.title %></h4></strong>
+	</div>
+	<div class="lesson-description">
+		<%= @lesson.description %>
+	</div>
 </div>
