--- a/app/views/api/v1/courses/index.html.erb
+++ b/app/views/api/v1/courses/index.html.erb
@@ -1,9 +1,11 @@
 <!-- note that the views must be scoped same as the controller -->
 <p id="notice"><%= notice %></p>
 
-<h3>Courses</h3>
+<div class="pb-2 mt-4 mb-2 border-bottom">
+	<h1>Courses</h1>
+</div>
 
-<% @courses.each do |course| %> 
+<% @courses.each do |course| %>
 	<div>
 		<div>
 			<h4><%= course.title %></h4>
@@ -13,8 +15,8 @@
 				<div>
 					<%= course.description %>
 				</div>
-				<div>
-					<%= link_to 'sections', api_v1_course_sections_url(course) %>
+				<div class="pt-2">
+					<%= link_to 'sections', api_v1_course_sections_url(course), class: "btn btn-success"%>
 				</div>
 		</div>
 	</div>
